src/objects/CustomOrder__c.object
<CustomObject>
    <description>Will have an external ID to query from another Salesforce. Created for a POC.</description>
    <fields>
        <fullName>AccountGUID__c</fullName>
        <description>EAA Field</description>
        <label>AccountGUID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNickname__c</fullName>
        <description>EAA Field</description>
        <label>AccountNickname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <description>EAA Field</description>
        <label>AccountNumber</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <description>EAA Field</description>
        <label>AccountType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container__c</fullName>
        <description>EAA Field</description>
        <label>Container</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <description>External Id lookup to Account from external query.</description>
        <label>ExternalID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiID__c</fullName>
        <description>EAA Field</description>
        <label>FiID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LPID__c</fullName>
        <description>EAA Field</description>
        <label>LPID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdated__c</fullName>
        <description>EAA Field</description>
        <label>LastUpdated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <description>Just an alphanumeric Id</description>
        <label>OrderID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RunningBalance__c</fullName>
        <description>EAA Field</description>
        <label>RunningBalance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SampleField__c</fullName>
        <label>SampleField</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YodleeMIDIdentifier__c</fullName>
        <description>EAA Field</description>
        <label>YodleeMIDIdentifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CustomOrder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Container__c</columns>
        <columns>OrderID__c</columns>
        <columns>ExternalID__c</columns>
        <columns>LastUpdated__c</columns>
        <columns>FiID__c</columns>
        <columns>LPID__c</columns>
        <columns>RunningBalance__c</columns>
        <columns>YodleeMIDIdentifier__c</columns>
        <columns>AccountNickname__c</columns>
        <columns>AccountNumber__c</columns>
        <columns>AccountGUID__c</columns>
        <columns>SampleField__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CustomOrder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomOrders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>